--- a/templates/index_template.html
+++ b/templates/index_template.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;1,400&family=IBM+Plex+Mono:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -128,7 +128,7 @@
       <footer class="footer">
         <p>
           Updated {{ timestamp }} •
-          <a href="https://github.com/aavetis/ai-pr-watcher">GitHub</a>
+          <a href="https://github.com/aavetis/ai-pr-watcher">by aavetis</a>
         </p>
       </footer>
     </div>
@@ -250,7 +250,7 @@
                   pointStyle: "circle",
                   color: "#64748b",
                   font: {
-                    family: "Inter",
+                    family: "IBM Plex Mono",
                     size: 11,
                     weight: "500",
                   },
@@ -290,7 +290,7 @@
                   text: "Time",
                   color: "#475569",
                   font: {
-                    family: "Inter",
+                    family: "IBM Plex Mono",
                     size: 12,
                     weight: "500",
                   },
@@ -298,7 +298,7 @@
                 grid: { color: "#f1f5f9", lineWidth: 1 },
                 ticks: {
                   color: "#475569",
-                  font: { family: "Inter", size: 11 },
+                  font: { family: "IBM Plex Mono", size: 11 },
                   maxRotation: 45,
                   minRotation: 0
                 },
@@ -312,7 +312,7 @@
                   text: "Number of PRs",
                   color: "#475569",
                   font: {
-                    family: "Inter",
+                    family: "IBM Plex Mono",
                     size: 12,
                     weight: "500",
                   },
@@ -320,7 +320,7 @@
                 grid: { color: "#f1f5f9", lineWidth: 1 },
                 ticks: {
                   color: "#475569",
-                  font: { family: "Inter", size: 11 },
+                  font: { family: "IBM Plex Mono", size: 11 },
                   callback: function(value) {
                     return value.toLocaleString();
                   }
@@ -336,14 +336,14 @@
                   text: "Success Rate (%)",
                   color: "#475569",
                   font: {
-                    family: "Inter",
+                    family: "IBM Plex Mono",
                     size: 12,
                     weight: "500",
                   },
                 },
                 ticks: {
                   color: "#475569",
-                  font: { family: "Inter", size: 11 },
+                  font: { family: "IBM Plex Mono", size: 11 },
                   callback: function (value) {
                     return value + "%";
                   },
